# love-story

./: .gitignore  README.md  lNote.md  zNote.md
C++_NewBegin/: mian.py
C++_practice/: a.out  operatorLearning.cpp  overloadmid.cpp  work_for_algorithm.txt
C++_practice/cmake_testing/: CMakeLists.txt
C++_practice/cmake_testing/src/calcDir/: CMakeLists.txt  divide.cpp  plus.cpp  plus.h
C++_practice/cmake_testing/src/logDir/: CMakeLists.txt
C++_practice/cmake_testing/test/: CMakeLists.txt  test.cpp
Codes/: hello.java  main.cpp
awesome_language/C++_Learning/dataStructure/: CMakeLists.txt  hashMap.cpp
awesome_language/C++_Learning/designPatterns/: Appearance.cpp  CMakeLists.txt  ChainofResponsibility.cpp  Command.cpp  Factory.cpp  Iterator.cpp  Mediator.cpp  Observer.cpp  Prototype.cpp  State.cpp  TemplateMethod.cpp  combination.cpp  simpleFactory.cpp
dataStruct/: 3-1.cpp  3-2.cpp  Study.cpp  aaa.cpp  listack.cpp  test.cpp
discard/: trash.md
docs/: main.md
leetcode/: lCode_diagonalTraversalForMatrix.cpp  lCode_isIsomorphic.cpp  lCode_isPalindrome.cpp  lCode_maxProfit.cpp  lCode_set0matrix.cpp
leetcodeDir/: CMakeLists.txt  a.out  lCode_1.cpp  lCode_1991.cpp  lCode_2.cpp  lCode_2Varr.cpp  lCode_3.cpp  lCode_48.cpp  lCode_arrayPairSum.cpp  lCode_canConstruct.cpp  lCode_canJump.cpp  lCode_convert.cpp  lCode_diagonalTraversalForMatrix.cpp  lCode_findMaxConsecutiveOnes.cpp  lCode_findMedianSortedArrays.cpp  lCode_hIndex.cpp  lCode_isSubsequence.cpp  lCode_lengthOfLastWord.cpp  lCode_lengthOfLongestSubstring.cpp  lCode_longestCommonPrefix.cpp  lCode_merge.cpp  (+11 more)
(+221 files in other folders)
