cmake_minimum_required(VERSION 3.20)
project(calc)
add_executable(calc main.cpp)
set(CALC_LIB CALC)
set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
target_link_libraries(calc CALC)
add_subdirectory(src/logDir)
add_subdirectory(src/calcDir)
add_subdirectory(test)
